Lab5 done