@@ -1,16 +1,17 @@
 package agh.ics.oop;
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
-public abstract class AbstractWorldMap implements IWorldMap {
-    final List<IMapObject> objectPositions;
+public abstract class AbstractWorldMap implements IWorldMap, IPositionChangeObserver {
+    Map<Vector2d, IMapObject> objectPositions;
 
-    public AbstractWorldMap(List<IMapObject> objectPositions) {
+    public AbstractWorldMap(Map<Vector2d, IMapObject> objectPositions) {
         this.objectPositions = objectPositions;
     }
 
-    public List<IMapObject> getObjectPositions() {
+    public Map<Vector2d, IMapObject> getObjectPositions() {
         return objectPositions;
     }
 
@@ -22,7 +23,14 @@ public abstract class AbstractWorldMap implements IWorldMap {
 
     public abstract Vector2d findTopRight();
 
-    public void init(){
+    public void init() {
+    }
+
+    @Override
+    public void positionChanged(Vector2d oldPosition, Vector2d newPosition) {
+        IMapObject iMapObject = objectPositions.get(oldPosition);
+        objectPositions.remove(oldPosition);
+        objectPositions.put(newPosition, iMapObject);
     }
 
     @Override
@@ -31,27 +39,30 @@ public abstract class AbstractWorldMap implements IWorldMap {
     @Override
     public boolean place(IMapObject object) {
         if (!isOccupied(object.getPosition())) {
-            objectPositions.add(object);
+            objectPositions.put(object.getPosition(), object);
+            if (object instanceof Animal){
+                ((Animal) object).addObserver(this);
+            }
             return true;
         }
         return false;
     }
 
     @Override
-    public boolean isOccupied(Vector2d position){
-        List<IMapObject> occupyingObjects = objectPositions.stream()
-                .filter(object -> object.getPosition().equals(position))
-                .collect(Collectors.toList());
+    public boolean isOccupied(Vector2d position) {
+        List<Vector2d> occupyingObjects = objectPositions.keySet().stream()
+                .filter(object -> object.equals(position))
+                .toList();
         return occupyingObjects.size() > 0;
     }
 
     @Override
     public Object objectAt(Vector2d position) {
-        List<IMapObject> occupyingObjects = objectPositions.stream()
-                .filter(object -> object.getPosition().equals(position))
-                .collect(Collectors.toList());
+        List<Vector2d> occupyingObjects = objectPositions.keySet().stream()
+                .filter(object -> object.equals(position))
+                .toList();
         if (occupyingObjects.size() > 0) {
-            return occupyingObjects.get(0);
+            return objectPositions.get(occupyingObjects.get(0));
         }
         return null;
     }
